<resources>

    <!--   程序名称  -->
    <string name="app_name">集群管理</string>

    <!--   系统设置菜单  -->
    <string name="start">开始MQTT连接</string>
    <string name="stop">断开MQTT连接</string>

    <string name="exittitle">退出程序</string>
    <string name="exitmessage">确定要退出吗？</string>

    <string name="startservice">开启服务保护</string>
    <string name="stopservice">停止服务保护</string>

    <string name="setting">设置</string>
        <string name="save">保存</string>
        <string name="back">返回</string>
        <string name="title_activity_setting">设置</string>
    <string name="update">检查更新</string>
    <string name="restart">重启程序</string>
    <string name="exit">残忍退出</string>

    <string name="listview">设置</string>
        <string name="title_activity_listview">集群报警详情</string>


    <!--   MQTT服务器设置  -->
    <string name="connection_settings_to_the_mqtt_server">MQTT服务器设置</string>
        <string name="hostname">中心集群域名</string>
            <string name="textEdit_hostname_hint">fudannhpcc.cn</string>
        <string name="protocol">支持网络协议</string>
            <string name="protocol_tcp">TCP</string>
            <string name="protocol_ssl">SSL</string>
            <string name="protocol_xyz">XYZ</string>
        <string name="port">端口</string>
            <string name="textEdit_port_hint">18883</string>
        <string name="username">用户名</string>
            <string name="textEdit_username_hint">nhpcc</string>
        <string name="password">密码</string>
            <string name="textEdit_password_hint">rtfu2002</string>
        <string name="sub_topic">订阅主题</string>
            <string name="textEdit_sub_topic_hint">fudannhpcc/warning/#</string>
        <string name="keep_connection_in_the_background_for_receiving_push_notifications">后台保持连接接收通知</string>
        <string name="server_mode">系统服务模式</string>
        <string name="server_topic">发布主题</string>
            <string name="editText_server_topic_hint">fudannhpcc/cluster/#</string>
        <string name="keep_alive">服务保活间隔（秒）</string>
            <string name="editText_keep_alive_hint">60</string>
        <string name="tcp_keep_alive">连接保活间隔（毫秒）</string>
            <string name="editText_tcp_keep_alive_hint">200</string>
        <string name="tcp_timeout">连接超时（毫秒）</string>
            <string name="editText_tcp_timeout_hint">200</string>
        <string name="updateurl">更新站点</string>
            <string name="editText_updateurl_hint">http://www.fudannhpcc.cn/apkupdate</string>

    <string name="listview_activity_name">中心集群报警</string>
        <string name="listview_activity_lbltitle">报警类型</string>
            <string name="listview_activity_title"></string>
        <string name="listview_activity_lbldatetime">发生时间</string>
            <string name="listview_activity_datetime"></string>
        <string name="listview_activity_lblmessage">报警信息</string>
            <string name="listview_activity_message"></string>


    <!--   网络和服务状态显示  -->
    <string name="network_status">网络状态</string>
    <string name="mqtt_status" translatable="false">MQTT服务</string>
    <string name="core_status" translatable="false">CORE服务</string>
    <string name="lbl_mqtt_message_echo">信息输出</string>

    <string name="mqtt_service_name">cn.fudannhpcc.www.alarm.service.MQTTService</string>
    <string name="core_service_name">cn.fudannhpcc.www.alarm.service.CoreService</string>

    <string name="mqtt_restart_name">cn.fudannhpcc.www.alarm.receiver.MqttRestarterBroadcastReceiver</string>

    <!--   AppSetting 存储名称  -->
    <string name="connection_hostname">connection_hostname</string>
    <string name="connection_protocol_tcp">connection_protocol_tcp</string>
    <string name="connection_protocol_ssl">connection_protocol_ssl</string>
    <string name="connection_protocol_xyz">connection_protocol_xyz</string>
    <string name="connection_port">connection_port</string>
    <string name="connection_username">connection_username</string>
    <string name="connection_password">connection_password</string>
    <string name="connection_push_notifications_subscribe_topic">connection_push_notifications_subscribe_topic</string>
    <string name="connection_keep_alive">connection_keep_alive</string>
    <string name="connection_tcp_keep_alive">connection_tcp_keep_alive</string>
    <string name="connection_tcp_timeout">connection_tcp_timeout</string>
    <string name="connection_in_background">connection_in_background</string>
    <string name="connection_server_mode">connection_server_mode</string>
    <string name="connection_server_topic">connection_server_topic</string>
    <string name="connection_mqtt_server">connection_mqtt_server</string>
    <string name="connection_update_url">connection_update_url</string>
    <string name="connection_client_id">connection_client_id</string>


</resources>
