<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.fudannhpcc.www.alarm.activity.SettingActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/connection_settings_to_the_mqtt_server"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView_hostname"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/hostname"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_red_dark" />
                <EditText
                    android:id="@+id/editText_hostname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textEdit_hostname_hint"
                    android:inputType="textUri"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView_server"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/protocol"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_red_dark" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/checkBox_tcp_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/protocol_tcp"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                    <CheckBox
                        android:id="@+id/checkBox_ssl_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/protocol_ssl"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                    <CheckBox
                        android:id="@+id/checkBox_xyz_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/protocol_xyz"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_port"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/port"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark" />
            <EditText
                android:id="@+id/editText_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEdit_port_hint"
                android:inputType="number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_username"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark" />
            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEdit_username_hint"
                android:inputType="text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_password"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark" />
            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEdit_password_hint"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView_push_notifications_subscribe_topic"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/sub_topic"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/editText_push_notifications_subscribe_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEdit_sub_topic_hint"
                android:inputType="text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBox_connection_in_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/keep_connection_in_the_background_for_receiving_push_notifications"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <CheckBox
                    android:id="@+id/checkBox_server_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/server_mode"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView_server_topic"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/server_topic"
                    android:textColor="@android:color/holo_red_dark"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <EditText
                    android:id="@+id/editText_server_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText_server_topic_hint"
                    android:inputType="text"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView_keep_alive"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/keep_alive"
                    android:textColor="@android:color/holo_red_dark"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <EditText
                    android:id="@+id/editText_keep_alive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText_keep_alive_hint"
                    android:inputType="text"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
