<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.fudannhpcc.www.alarm.activity.SettingActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/listview_activity_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/listview_activity_lbltitle"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:text="@string/listview_activity_lbltitle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="16sp"
                    android:textColor="@android:color/background_dark" />
                <TextView
                    android:id="@+id/listview_activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="5sp"
                    android:text="@string/listview_activity_title"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_red_light" />
                <ImageView
                    android:id="@+id/listview_activity_image"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_notification"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/listview_activity_lbldatetime"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:text="@string/listview_activity_lbldatetime"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="16sp"
                    android:textColor="@android:color/background_dark" />
                <TextView
                    android:id="@+id/listview_activity_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="5sp"
                    android:text="@string/listview_activity_datetime"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_blue_bright" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/listview_activity_lblmessage"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:maxLines="100"
                    android:text="@string/listview_activity_lblmessage"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="16sp"
                    android:textColor="@android:color/background_dark" />
                <TextView
                    android:id="@+id/listview_activity_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="20sp"
                    android:maxLines="100"
                    android:text="@string/listview_activity_message"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
